fix of overlapping content

--- a/css/components/projects.css
+++ b/css/components/projects.css
@@ -22,10 +22,12 @@
     padding-left: 40px;
     text-align: center;
     position: relative;
+    z-index: -1;
 }
 .filters > a.filter-a:hover::before {
     content: '';
     position: absolute;
+    z-index: -1;
     background-color: black;
     display: inline-block;
     height: 2px;
@@ -55,7 +57,7 @@
     text-align: center;
     display: inline-block;
     position: relative;
-
+    z-index: -1;
 }
 
 
@@ -65,6 +67,7 @@
 
 .filters-content > .filters-icon {
     position: absolute;
+    z-index: -1;
     display: none;
     top: 0;
     left: 0;
